openshift/statefulset_psql_replica.yaml
apiVersion: v1
kind: Service
metadata:
  name: b2testpsql-replica-headless
  namespace: ${NAMESPACE}
spec:
  clusterIP: None
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
    - port: 9187
      targetPort: 9187
      name: metrics
  selector:
    app: b2testpsql-replica
---
apiVersion: v1
kind: Service
metadata:
  name: b2testpsql-replica
  namespace: ${NAMESPACE}
  labels:
    metrics-target: postgres
    postgres-role: replica
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
    - port: 9187
      targetPort: 9187
      name: metrics
  selector:
    app: b2testpsql-replica
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: b2testpsql-replica
  namespace: ${NAMESPACE}
spec:
  serviceName: b2testpsql-replica-headless
  replicas: 1
  selector:
    matchLabels:
      app: b2testpsql-replica
  template:
    metadata:
      labels:
        app: b2testpsql-replica
    spec:
      securityContext:
        runAsNonRoot: false
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: postgres-logs
          emptyDir: {}
        - name: promtail-config
          configMap:
            name: promtail-config
      containers:
        - name: postgres
          image: postgres:15
          args:
            - "-c"
            - "log_min_duration_statement=500"
            - "-c"
            - "logging_collector=on"
            - "-c"
            - "log_directory=/var/log/postgresql"
            - "-c"
            - "log_filename=postgresql-%Y-%m-%d.log"
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            requests:
              cpu: "2"
              memory: "4Gi"
            limits:
              cpu: "4"
              memory: "8Gi"
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: postgres-logs
              mountPath: /var/log/postgresql
        - name: postgres-exporter
          image: quay.io/prometheuscommunity/postgres-exporter:v0.15.0
          ports:
            - containerPort: 9187
              name: metrics
        - name: promtail
          image: grafana/promtail:2.9.0
          args:
            - "-config.file=/etc/promtail/promtail-config.yaml"
          volumeMounts:
            - name: postgres-logs
              mountPath: /var/log/postgresql
            - name: promtail-config
              mountPath: /etc/promtail
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 50Gi
