openshift/nginx-unified.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-unified
  namespace: <project>
  labels:
    app: nginx-unified
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-unified
  template:
    metadata:
      labels:
        app: nginx-unified
    spec:
      securityContext:
        runAsUser: 101
        fsGroup: 1000860000
      volumes:
        - name: files-volume
          persistentVolumeClaim:
            claimName: <pvc_payload_server>
        - name: nginx-conf-volume
          configMap:
            name: nginx-unified-conf
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-pid
          emptyDir: {}
      containers:
        - name: nginx
          image: <nginx_docker_image>
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: files-volume
              mountPath: /usr/share/nginx/html
              subPath: <subPath>
            - name: nginx-conf-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-pid
              mountPath: /var/run
          imagePullPolicy: IfNotPresent
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-unified
  namespace: <project>
spec:
  selector:
    app: nginx-unified
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx-unified
  namespace: <project>
  annotations:
    haproxy.router.openshift.io/disable_cookies: "true"
spec:
  host: <appname>.apps.<okdcluster>
  to:
    kind: Service
    name: nginx-unified
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
